// REMEMBER: This must be run using the Gradle tas application:run

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group 'org.ringingmaster'
version '1.0.0'

compileJava {
    sourceCompatibility = 12
    targetCompatibility = 12
}

repositories {
    mavenCentral()
}
// REMEMBER: This must be run using the Gradle tas application:run
javafx {
    version = "12"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base' ]
}

mainClassName = 'org.ringingmaster.ui.desktop.RingingMasterDesktopApp'
applicationDefaultJvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']


dependencies {

    // Internal
    implementation 'org.ringingmaster:ringingmaster-engine:1.0.0'
    implementation 'org.ringingmaster:ringingmaster-util:1.0.0'
    implementation 'org.ringingmaster:ringingmaster-persist:1.0.0'
    implementation 'org.ringingmaster:ringingmaster-util-javafx:1.0.0'

    // General
    implementation 'com.google.guava:guava:27.1-jre'
    implementation 'org.pcollections:pcollections:2.1.2'

    // Spring
    implementation 'org.springframework:spring-context:4.3.10.RELEASE'

    // Other
    implementation 'org.controlsfx:controlsfx:11.0.0'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'io.reactivex:rxjavafx:2.0.2'
    implementation 'io.reactivex.rxjava2:rxjavafx:2.2.2'
    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'

    // Logging
    implementation 'org.slf4j:slf4j-api:1.7.25'

    // Logging
    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.8.2'
    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.8.2'
    runtimeOnly 'org.apache.logging.log4j:log4j-jcl:2.8.2' //Needed for Spring

    // TEST: General
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.mockito:mockito-core:2.8.47'

    // TEST: Logging
    testRuntimeOnly 'org.apache.logging.log4j:log4j-core:2.8.2'
    testRuntimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.8.2'
}
